bug:div container too small to contain the comment page

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,6 @@ body{
 	margin-bottom:30px;
 	margin-left: 25px;
 	margin-right: 25px;
-	height:350px;
+	min-height:350px;
 	border-radius: 5px;
 }
